  all of --c, --nc, --ct and --ctt were given
- Fix a lacuna in type-checking of hansl statements
- GUI: support the --by option for the "summary" command, when
  called via the main-window "View" menu
- GUI: fix the "Numerical summary" option in a window showing
  a factorized boxplot (was broken when the factor variable was
  string-valued)

2024-05-21 version 2024b
- "gridplot" command: add a --title option
- "clear" command: add an --all option
- instrings() function: add optional boolean argument to get
  a simple boolean return value
- typeof() function: functionality is extended to cover hansl
  expressions in general
- exists() function: recommended usage is restricted to top-
  level identifiers, but backward compatibility is preserved
  for the present
- new function binperms() for binary permutations
- Testing for equality via "==" and "!=": extend this to cover
  arrays and bundles
- help files: clarify the help for some commands and improve
  formatting
- $sysinfo bundle: add "stack_size"
- mrw (Mankiw-Romer-Weil) dataset: rename "inv" as "i_y"
- Fix bug: crash on replacing a single character in a string
  variable, when the replacement UTF-8 character takes up more
  bytes than the original
- Fix bug: potential crash when using the "smpl" command on a
  dataset that is already subject to random resampling
- Fix bug: possible confusion in parsing lag specifications
  for list members, as in "list.vname(-1)"
- Fix bug: possible interference of options passed in "plot"
  with those passed to "gnuplot"
- Fix bug: crash in 32-bit gretl for Windows when trying to
  read gdtb data files created on a 64-bit system
- Function packages: validate gfn files using an XML schema
  rather than a Document Type Definition
- GUI, function packages: further extensions to the "ui-maker"
  functionality, plus minor fixes for the function-call dialog
- GUI: support the --preserve-panel option in the dialog box
  for sub-sampling